2002-09-12  David Hyatt  <hyatt@apple.com>

	Make fixed positioned elements work when you scroll.  We were
	just missing the implementation of a QScrollView method.
	
        * kwq/KWQScrollView.mm:
        (QScrollView::setStaticBackground):

2002-09-12  David Hyatt  <hyatt@apple.com>

	Fix a bug in KHTML that leads it to claim cached @imported stylesheets
	are not loaded (when in fact they are).

	This fixes the W3C CSS page.
	
        * khtml/css/css_ruleimpl.cpp:
        (CSSImportRuleImpl::init):

2002-09-12  Chris Blumenberg  <cblu@apple.com>

	Fixed livepage crash on Marklar. It is naughty to divide by 0 on marklar so we now check before doing that.

        * khtml/rendering/render_box.cpp:
        (RenderBox::printBackground):

2002-09-12  David Hyatt  <hyatt@apple.com>

	Fix crash on trekweb.com.  My simplified FOUC code was a little
	bit too simple. ;)
	
        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::setStyleSheet):
        (HTMLStyleElementImpl::childrenChanged):

2002-09-12  David Hyatt  <hyatt@apple.com>

	Fix the Warcraft 3 page on blizzard.com so that the relative
	positioned blocks inside centered tables inside enclosing tables
	with percentage widths work correctly.

	This fix also causes the textfields on mrskin.com to show up
	again.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::RenderBox):
        (RenderBox::setPos):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_container.cpp:
        (RenderContainer::addChild):
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::constructZTree):
        * khtml/rendering/render_object.h:

2002-09-11  Maciej Stachowiak  <mjs@apple.com>

	Don't show the window here any more, now that WebBrowser will set
	it up to be shown properly itself.
	
        * kwq/KWQKHTMLPartBrowserExtension.mm:
        (KHTMLPartBrowserExtension::createNewWindow):

2002-09-11  David Hyatt  <hyatt@apple.com>
